changed: update privacy page and footer background

--- a/src/assets/scss/object/project/_footer.scss
+++ b/src/assets/scss/object/project/_footer.scss
@@ -1,6 +1,7 @@
 // footer
 .page__footer {
-    background: linear-gradient(to right, #003782, #0059b6);
+    // background: linear-gradient(to right, #003782, #0059b6);
+    background: linear-gradient(to right, #000017, #0059c4);
 
     .l-wrap {
         @include is-sp {
