--- a/src/assets/scss/pages/_privacy-policy.scss
+++ b/src/assets/scss/pages/_privacy-policy.scss
@@ -5,8 +5,8 @@
 		padding: 0 0 80px 0;
 		background: linear-gradient(to right, #2079bd, #1e91d2);
 
-		@include is-max(400px) {
-			padding: 0 0 95px 0;
+		@include is-sp {
+			padding: 0 0 75px 0;
 		}
 
 		&--ttl {
@@ -24,14 +24,12 @@
 				&:nth-child(1) {
 					@include is-max(400px) {
 						font-size: 7vw;
-						;
 					}
 				}
 
 				&:nth-child(2) {
 					@include is-max(400px) {
 						font-size: 3vw;
-						;
 					}
 				}
 			}
@@ -45,15 +43,41 @@
 		// @include is-sp {
 		// 	padding-bottom: 55px;
 		// }
-		background: linear-gradient(to right, #003782, #0059b6);
+		background: linear-gradient(to right, #000017, #0059c4);
 		clip-path: polygon(0 2%, 100% 0%, 100% 101%, 0% 100%);
 		margin-top: -100px;
 		padding-bottom: 101px;
 		padding-top: 150px;
+		position: relative;
 
+		&::before {
+			content: "";
+			position: absolute;
+			width: 100%;
+			height: 15%;
+			top: 0;
+			left: 0;
+			right: 0;
+			clip-path: polygon(50% 0%, 100% 0, 100% 16%, 72% 33%, 0% 14%, 0 0, 0 0);
+			background: linear-gradient(to right, #0059c6, #000017);
+			opacity: 0.4;
+
+			@include is-sp {
+				clip-path: polygon(
+					50% 0%,
+					100% 0,
+					100% 86%,
+					66% 100%,
+					0% 60%,
+					0% 0%,
+					0% 0%
+				);
+				height: 136px;
+			}
+		}
 
 		@include is-sp {
-			padding-bottom: 101px;
+			padding-bottom: 75px;
 			clip-path: polygon(0 80px, 100% 1%, 100% 101%, 0% 100%);
 			margin-top: -130px;
 		}
@@ -114,7 +138,7 @@
 
 	&__title {
 		color: $color-text03;
-		font-family: yu-gothic-pr6n, sans-serif;;
+		font-family: yu-gothic-pr6n, sans-serif;
 		letter-spacing: 0.2em;
 		padding: 20px 8px 30px 8px;
 		font-weight: 500;
@@ -134,7 +158,7 @@
 
 		@include is-sp {
 			letter-spacing: 0;
-			padding-top: 50px;
+			padding-top: 40px;
 
 			br {
 				display: block;
@@ -145,8 +169,6 @@
 			font-size: 3.3vw;
 			padding-left: 10px;
 		}
-
-
 	}
 
 	&__main-content {
@@ -183,7 +205,6 @@
 				padding: 0 0;
 			}
 
-
 			.left,
 			.right {
 				width: 47%;
@@ -195,10 +216,9 @@
 				.col {
 					padding-bottom: 60px;
 
-					&:nth-child(2){
-
-						.col--ttl{
-							@include is-sp{
+					&:nth-child(2) {
+						.col--ttl {
+							@include is-sp {
 								padding-left: 24px;
 								text-align: left;
 							}
@@ -211,13 +231,13 @@
 						}
 					}
 
-					.p-l-30{
-						padding-left: 30px
+					.p-l-30 {
+						padding-left: 30px;
 					}
 
 					&--ttl {
 						@include font-line(16, 26);
-						font-family: yu-gothic-pr6n, sans-serif;;
+						font-family: yu-gothic-pr6n, sans-serif;
 						font-weight: 700;
 						letter-spacing: 0.1em;
 						padding-bottom: 10px;
@@ -228,9 +248,9 @@
 							padding: 0 20px 10px;
 							text-align: center;
 						}
-						
-						&:nth-child(2){
-							@include is-sp{
+
+						&:nth-child(2) {
+							@include is-sp {
 								padding-left: 0;
 							}
 						}
@@ -255,7 +275,7 @@
 							justify-content: flex-start;
 							align-items: baseline;
 							@include font-line(13, 26);
-							font-family: yu-gothic-pr6n, sans-serif;;
+							font-family: yu-gothic-pr6n, sans-serif;
 							font-weight: 700;
 							letter-spacing: 0;
 
@@ -293,7 +313,7 @@
 
 							p {
 								@include font-line(13, 26);
-								font-family: yu-gothic-pr6n, sans-serif;;
+								font-family: yu-gothic-pr6n, sans-serif;
 								font-weight: 500;
 								letter-spacing: 0.08em;
 								color: #000;
@@ -314,9 +334,13 @@
 					padding-bottom: 0;
 
 					@include is-sp {
-						
 					}
+				}
+			}
 
+			.left {
+				@include is-sp {
+					padding-bottom: 60px;
 				}
 			}
 
@@ -334,38 +358,35 @@
 				.col:last-child {
 					padding-bottom: 30px;
 
-					@include is-sp{}
+					@include is-sp {
+					}
 				}
 
-				.col{
-
-					&:nth-child(4){
-						
-						.col--ttl{
-							@include is-max(375px){
+				.col {
+					&:nth-child(4) {
+						.col--ttl {
+							@include is-max(375px) {
 								padding-left: 24px;
 								text-align: left;
 							}
 						}
 					}
 
-					&:nth-child(5){
-
-						.col--cont01--txt{
-							@include is-sp{
+					&:nth-child(5) {
+						.col--cont01--txt {
+							@include is-sp {
 								margin: 0 20px 0 20px;
 							}
 						}
 
-						.col--cont01{
-							@include is-sp{
+						.col--cont01 {
+							@include is-sp {
 								padding-left: 0;
 								padding-bottom: 20px;
 							}
 						}
 					}
 				}
-
 			}
 		}
 	}
@@ -376,6 +397,10 @@
 		top: -48px;
 		right: 63px;
 		width: 316px;
+
+		@include is-sp {
+			top: -64px;
+		}
 
 		@include is-max(500px) {
 			right: 10px;
