--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -182,7 +182,7 @@
 .top-header {
 	padding-top: 105px;
 	overflow: hidden;
-	background: linear-gradient(to right, #2079bd, #1e91d2);
+	background: linear-gradient(to right, #0059c4, #000017);
 
 	@include is-sp {
 		overflow: hidden;
