--- a/src/assets/scss/pages/_privacy-policy.scss
+++ b/src/assets/scss/pages/_privacy-policy.scss
@@ -3,7 +3,7 @@
 
 	.c-banner {
 		padding: 0 0 80px 0;
-		background: linear-gradient(to right, #2079bd, #1e91d2);
+		background: linear-gradient(to right, #0059c4, #000017);
 
 		@include is-sp {
 			padding: 0 0 75px 0;
@@ -37,28 +37,22 @@
 	}
 
 	&__section_1 {
-		// background: linear-gradient(to right, #003782, #0059b6);
-		// padding-bottom: 100px;
-
-		// @include is-sp {
-		// 	padding-bottom: 55px;
-		// }
 		background: linear-gradient(to right, #000017, #0059c4);
 		clip-path: polygon(0 2%, 100% 0%, 100% 101%, 0% 100%);
 		margin-top: -100px;
 		padding-bottom: 101px;
-		padding-top: 150px;
+		padding-top: 120px;
 		position: relative;
 
 		&::before {
 			content: "";
 			position: absolute;
 			width: 100%;
-			height: 15%;
+			height: 12%;
 			top: 0;
 			left: 0;
 			right: 0;
-			clip-path: polygon(50% 0%, 100% 0, 100% 16%, 72% 33%, 0% 14%, 0 0, 0 0);
+			clip-path: polygon(50% 0%, 100% 0, 100% 16%, 72% 33%, 0% 17%, 0 0, 0 0);
 			background: linear-gradient(to right, #0059c6, #000017);
 			opacity: 0.4;
 
@@ -80,6 +74,7 @@
 			padding-bottom: 75px;
 			clip-path: polygon(0 80px, 100% 1%, 100% 101%, 0% 100%);
 			margin-top: -130px;
+			padding-top: 150px;
 		}
 
 		.l-wrap {
@@ -123,7 +118,7 @@
 		width: 800px;
 		height: 250px;
 		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-		background: linear-gradient(to right, #003782, #0059b6);
+		background: linear-gradient(to right, #0059c4, #000017);
 		position: absolute;
 		top: 0;
 		right: 0%;
